# stereocam

./: .calibrate.cpp.swp  CMakeCache.txt  CMakeLists.txt  Makefile  calibrate  canny  cmake_install.cmake  commands.sh  extrinsics.yml  filter  filter.cpp  generate_depth_map  img.xml  intrinsics.yml  pointcloud.xyz  sample.sh  sampleimgs.xml  takePics.sh  test.sh  testimgs.xml
