cmake_minimum_required(VERSION 3.3.2)
project(stereo_camera)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS})
add_executable(calibrate calibrate.cpp)
add_executable(generate_depth_map depthMap.cpp)
add_executable(filter filter.cpp)
add_executable(canny canny.cpp)
target_link_libraries(calibrate PRIVATE ${OpenCV_LIBS})
target_link_libraries(generate_depth_map PRIVATE ${OpenCV_LIBS})
target_link_libraries(filter PRIVATE ${OpenCV_LIBS})
target_link_libraries(canny PRIVATE ${OpenCV_LIBS})
